--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -6,11 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "git": "^0.1.5",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
